frontend/test/should_pass/pattern_012.grg
pattern Foo
{
	x: Node;
	
	modify bla
	{
	}
}

rule r
{
	x: Node;
	foo:Foo();

	modify
	{
		foo();
	}
}