frontend/test/should_fail/pattern_006a.grg
using patt;

pattern Foo
{
	:Node;
	
	modify(a:Node, b:Node) {
	}
}

rule r {
	a:Node;	b:Node; c:Node;
	foo1:Foo();
	foo2:Foo();
	
	modify {
		foo1(a);
		foo2(a,b,c);
	}
}